parser.output
Grammar

    0 $accept: Start $end

    1 Start: /* empty */
    2      | Exp
    3      | HELP
    4      | QUIT

    5 Exp: Primary
    6    | Exp OP_ADD Primary
    7    | Exp OP_SUB Primary
    8    | Exp OP_MUL Primary
    9    | Exp OP_DIV Primary
   10    | Exp OP_POW Primary
   11    | Exp OP_MOD Primary
   12    | Exp OP_FACT
   13    | M_SIN Primary
   14    | M_COS Primary
   15    | M_TAN Primary
   16    | M_COTAN Primary
   17    | M_LOG Primary
   18    | M_LOG2 Primary
   19    | M_LOGE Primary
   20    | M_SQRT Primary
   21    | M_CEIL Primary
   22    | M_FLOOR Primary
   23    | OP_SUB Primary
   24    | OP_ADD Primary

   25 Primary: VARIABLE
   26        | VARIABLE OP_EQU Exp
   27        | Constant
   28        | LPAR Exp RPAR

   29 Constant: INT_VAL
   30         | DBL_VAL
   31         | CONST_PI
   32         | CONST_E


Terminals, with rules where they appear

$end (0) 0
error (256)
VARIABLE (258) 25 26
INT_VAL (259) 29
DBL_VAL (260) 30
LPAR (261) 28
RPAR (262) 28
OP_EQU (263) 26
HELP (264) 3
QUIT (265) 4
M_SIN (266) 13
M_COS (267) 14
M_TAN (268) 15
M_COTAN (269) 16
M_LOG (270) 17
M_LOG2 (271) 18
M_LOGE (272) 19
M_SQRT (273) 20
M_CEIL (274) 21
M_FLOOR (275) 22
CONST_PI (276) 31
CONST_E (277) 32
OP_SUB (278) 7 23
OP_ADD (279) 6 24
OP_DIV (280) 9
OP_MUL (281) 8
OP_MOD (282) 11
USUB (283)
UADD (284)
OP_POW (285) 10
OP_FACT (286) 12


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
Start (33)
    on left: 1 2 3 4, on right: 0
Exp (34)
    on left: 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24,
    on right: 2 6 7 8 9 10 11 12 26 28
Primary (35)
    on left: 25 26 27 28, on right: 5 6 7 8 9 10 11 13 14 15 16 17
    18 19 20 21 22 23 24
Constant (36)
    on left: 29 30 31 32, on right: 27


state 0

    0 $accept: . Start $end
    1 Start: .  [$end]
    2      | . Exp
    3      | . HELP
    4      | . QUIT
    5 Exp: . Primary
    6    | . Exp OP_ADD Primary
    7    | . Exp OP_SUB Primary
    8    | . Exp OP_MUL Primary
    9    | . Exp OP_DIV Primary
   10    | . Exp OP_POW Primary
   11    | . Exp OP_MOD Primary
   12    | . Exp OP_FACT
   13    | . M_SIN Primary
   14    | . M_COS Primary
   15    | . M_TAN Primary
   16    | . M_COTAN Primary
   17    | . M_LOG Primary
   18    | . M_LOG2 Primary
   19    | . M_LOGE Primary
   20    | . M_SQRT Primary
   21    | . M_CEIL Primary
   22    | . M_FLOOR Primary
   23    | . OP_SUB Primary
   24    | . OP_ADD Primary
   25 Primary: . VARIABLE
   26        | . VARIABLE OP_EQU Exp
   27        | . Constant
   28        | . LPAR Exp RPAR
   29 Constant: . INT_VAL
   30         | . DBL_VAL
   31         | . CONST_PI
   32         | . CONST_E

    VARIABLE  shift, and go to state 1
    INT_VAL   shift, and go to state 2
    DBL_VAL   shift, and go to state 3
    LPAR      shift, and go to state 4
    HELP      shift, and go to state 5
    QUIT      shift, and go to state 6
    M_SIN     shift, and go to state 7
    M_COS     shift, and go to state 8
    M_TAN     shift, and go to state 9
    M_COTAN   shift, and go to state 10
    M_LOG     shift, and go to state 11
    M_LOG2    shift, and go to state 12
    M_LOGE    shift, and go to state 13
    M_SQRT    shift, and go to state 14
    M_CEIL    shift, and go to state 15
    M_FLOOR   shift, and go to state 16
    CONST_PI  shift, and go to state 17
    CONST_E   shift, and go to state 18
    OP_SUB    shift, and go to state 19
    OP_ADD    shift, and go to state 20

    $default  reduce using rule 1 (Start)

    Start     go to state 21
    Exp       go to state 22
    Primary   go to state 23
    Constant  go to state 24


state 1

   25 Primary: VARIABLE .  [$end, RPAR, OP_SUB, OP_ADD, OP_DIV, OP_MUL, OP_MOD, OP_POW, OP_FACT]
   26        | VARIABLE . OP_EQU Exp

    OP_EQU  shift, and go to state 25

    $default  reduce using rule 25 (Primary)


state 2

   29 Constant: INT_VAL .

    $default  reduce using rule 29 (Constant)


state 3

   30 Constant: DBL_VAL .

    $default  reduce using rule 30 (Constant)


state 4

    5 Exp: . Primary
    6    | . Exp OP_ADD Primary
    7    | . Exp OP_SUB Primary
    8    | . Exp OP_MUL Primary
    9    | . Exp OP_DIV Primary
   10    | . Exp OP_POW Primary
   11    | . Exp OP_MOD Primary
   12    | . Exp OP_FACT
   13    | . M_SIN Primary
   14    | . M_COS Primary
   15    | . M_TAN Primary
   16    | . M_COTAN Primary
   17    | . M_LOG Primary
   18    | . M_LOG2 Primary
   19    | . M_LOGE Primary
   20    | . M_SQRT Primary
   21    | . M_CEIL Primary
   22    | . M_FLOOR Primary
   23    | . OP_SUB Primary
   24    | . OP_ADD Primary
   25 Primary: . VARIABLE
   26        | . VARIABLE OP_EQU Exp
   27        | . Constant
   28        | . LPAR Exp RPAR
   28        | LPAR . Exp RPAR
   29 Constant: . INT_VAL
   30         | . DBL_VAL
   31         | . CONST_PI
   32         | . CONST_E

    VARIABLE  shift, and go to state 1
    INT_VAL   shift, and go to state 2
    DBL_VAL   shift, and go to state 3
    LPAR      shift, and go to state 4
    M_SIN     shift, and go to state 7
    M_COS     shift, and go to state 8
    M_TAN     shift, and go to state 9
    M_COTAN   shift, and go to state 10
    M_LOG     shift, and go to state 11
    M_LOG2    shift, and go to state 12
    M_LOGE    shift, and go to state 13
    M_SQRT    shift, and go to state 14
    M_CEIL    shift, and go to state 15
    M_FLOOR   shift, and go to state 16
    CONST_PI  shift, and go to state 17
    CONST_E   shift, and go to state 18
    OP_SUB    shift, and go to state 19
    OP_ADD    shift, and go to state 20

    Exp       go to state 26
    Primary   go to state 23
    Constant  go to state 24


state 5

    3 Start: HELP .

    $default  reduce using rule 3 (Start)


state 6

    4 Start: QUIT .

    $default  reduce using rule 4 (Start)


state 7

   13 Exp: M_SIN . Primary
   25 Primary: . VARIABLE
   26        | . VARIABLE OP_EQU Exp
   27        | . Constant
   28        | . LPAR Exp RPAR
   29 Constant: . INT_VAL
   30         | . DBL_VAL
   31         | . CONST_PI
   32         | . CONST_E

    VARIABLE  shift, and go to state 1
    INT_VAL   shift, and go to state 2
    DBL_VAL   shift, and go to state 3
    LPAR      shift, and go to state 4
    CONST_PI  shift, and go to state 17
    CONST_E   shift, and go to state 18

    Primary   go to state 27
    Constant  go to state 24


state 8

   14 Exp: M_COS . Primary
   25 Primary: . VARIABLE
   26        | . VARIABLE OP_EQU Exp
   27        | . Constant
   28        | . LPAR Exp RPAR
   29 Constant: . INT_VAL
   30         | . DBL_VAL
   31         | . CONST_PI
   32         | . CONST_E

    VARIABLE  shift, and go to state 1
    INT_VAL   shift, and go to state 2
    DBL_VAL   shift, and go to state 3
    LPAR      shift, and go to state 4
    CONST_PI  shift, and go to state 17
    CONST_E   shift, and go to state 18

    Primary   go to state 28
    Constant  go to state 24


state 9

   15 Exp: M_TAN . Primary
   25 Primary: . VARIABLE
   26        | . VARIABLE OP_EQU Exp
   27        | . Constant
   28        | . LPAR Exp RPAR
   29 Constant: . INT_VAL
   30         | . DBL_VAL
   31         | . CONST_PI
   32         | . CONST_E

    VARIABLE  shift, and go to state 1
    INT_VAL   shift, and go to state 2
    DBL_VAL   shift, and go to state 3
    LPAR      shift, and go to state 4
    CONST_PI  shift, and go to state 17
    CONST_E   shift, and go to state 18

    Primary   go to state 29
    Constant  go to state 24


state 10

   16 Exp: M_COTAN . Primary
   25 Primary: . VARIABLE
   26        | . VARIABLE OP_EQU Exp
   27        | . Constant
   28        | . LPAR Exp RPAR
   29 Constant: . INT_VAL
   30         | . DBL_VAL
   31         | . CONST_PI
   32         | . CONST_E

    VARIABLE  shift, and go to state 1
    INT_VAL   shift, and go to state 2
    DBL_VAL   shift, and go to state 3
    LPAR      shift, and go to state 4
    CONST_PI  shift, and go to state 17
    CONST_E   shift, and go to state 18

    Primary   go to state 30
    Constant  go to state 24


state 11

   17 Exp: M_LOG . Primary
   25 Primary: . VARIABLE
   26        | . VARIABLE OP_EQU Exp
   27        | . Constant
   28        | . LPAR Exp RPAR
   29 Constant: . INT_VAL
   30         | . DBL_VAL
   31         | . CONST_PI
   32         | . CONST_E

    VARIABLE  shift, and go to state 1
    INT_VAL   shift, and go to state 2
    DBL_VAL   shift, and go to state 3
    LPAR      shift, and go to state 4
    CONST_PI  shift, and go to state 17
    CONST_E   shift, and go to state 18

    Primary   go to state 31
    Constant  go to state 24


state 12

   18 Exp: M_LOG2 . Primary
   25 Primary: . VARIABLE
   26        | . VARIABLE OP_EQU Exp
   27        | . Constant
   28        | . LPAR Exp RPAR
   29 Constant: . INT_VAL
   30         | . DBL_VAL
   31         | . CONST_PI
   32         | . CONST_E

    VARIABLE  shift, and go to state 1
    INT_VAL   shift, and go to state 2
    DBL_VAL   shift, and go to state 3
    LPAR      shift, and go to state 4
    CONST_PI  shift, and go to state 17
    CONST_E   shift, and go to state 18

    Primary   go to state 32
    Constant  go to state 24


state 13

   19 Exp: M_LOGE . Primary
   25 Primary: . VARIABLE
   26        | . VARIABLE OP_EQU Exp
   27        | . Constant
   28        | . LPAR Exp RPAR
   29 Constant: . INT_VAL
   30         | . DBL_VAL
   31         | . CONST_PI
   32         | . CONST_E

    VARIABLE  shift, and go to state 1
    INT_VAL   shift, and go to state 2
    DBL_VAL   shift, and go to state 3
    LPAR      shift, and go to state 4
    CONST_PI  shift, and go to state 17
    CONST_E   shift, and go to state 18

    Primary   go to state 33
    Constant  go to state 24


state 14

   20 Exp: M_SQRT . Primary
   25 Primary: . VARIABLE
   26        | . VARIABLE OP_EQU Exp
   27        | . Constant
   28        | . LPAR Exp RPAR
   29 Constant: . INT_VAL
   30         | . DBL_VAL
   31         | . CONST_PI
   32         | . CONST_E

    VARIABLE  shift, and go to state 1
    INT_VAL   shift, and go to state 2
    DBL_VAL   shift, and go to state 3
    LPAR      shift, and go to state 4
    CONST_PI  shift, and go to state 17
    CONST_E   shift, and go to state 18

    Primary   go to state 34
    Constant  go to state 24


state 15

   21 Exp: M_CEIL . Primary
   25 Primary: . VARIABLE
   26        | . VARIABLE OP_EQU Exp
   27        | . Constant
   28        | . LPAR Exp RPAR
   29 Constant: . INT_VAL
   30         | . DBL_VAL
   31         | . CONST_PI
   32         | . CONST_E

    VARIABLE  shift, and go to state 1
    INT_VAL   shift, and go to state 2
    DBL_VAL   shift, and go to state 3
    LPAR      shift, and go to state 4
    CONST_PI  shift, and go to state 17
    CONST_E   shift, and go to state 18

    Primary   go to state 35
    Constant  go to state 24


state 16

   22 Exp: M_FLOOR . Primary
   25 Primary: . VARIABLE
   26        | . VARIABLE OP_EQU Exp
   27        | . Constant
   28        | . LPAR Exp RPAR
   29 Constant: . INT_VAL
   30         | . DBL_VAL
   31         | . CONST_PI
   32         | . CONST_E

    VARIABLE  shift, and go to state 1
    INT_VAL   shift, and go to state 2
    DBL_VAL   shift, and go to state 3
    LPAR      shift, and go to state 4
    CONST_PI  shift, and go to state 17
    CONST_E   shift, and go to state 18

    Primary   go to state 36
    Constant  go to state 24


state 17

   31 Constant: CONST_PI .

    $default  reduce using rule 31 (Constant)


state 18

   32 Constant: CONST_E .

    $default  reduce using rule 32 (Constant)


state 19

   23 Exp: OP_SUB . Primary
   25 Primary: . VARIABLE
   26        | . VARIABLE OP_EQU Exp
   27        | . Constant
   28        | . LPAR Exp RPAR
   29 Constant: . INT_VAL
   30         | . DBL_VAL
   31         | . CONST_PI
   32         | . CONST_E

    VARIABLE  shift, and go to state 1
    INT_VAL   shift, and go to state 2
    DBL_VAL   shift, and go to state 3
    LPAR      shift, and go to state 4
    CONST_PI  shift, and go to state 17
    CONST_E   shift, and go to state 18

    Primary   go to state 37
    Constant  go to state 24


state 20

   24 Exp: OP_ADD . Primary
   25 Primary: . VARIABLE
   26        | . VARIABLE OP_EQU Exp
   27        | . Constant
   28        | . LPAR Exp RPAR
   29 Constant: . INT_VAL
   30         | . DBL_VAL
   31         | . CONST_PI
   32         | . CONST_E

    VARIABLE  shift, and go to state 1
    INT_VAL   shift, and go to state 2
    DBL_VAL   shift, and go to state 3
    LPAR      shift, and go to state 4
    CONST_PI  shift, and go to state 17
    CONST_E   shift, and go to state 18

    Primary   go to state 38
    Constant  go to state 24


state 21

    0 $accept: Start . $end

    $end  shift, and go to state 39


state 22

    2 Start: Exp .  [$end]
    6 Exp: Exp . OP_ADD Primary
    7    | Exp . OP_SUB Primary
    8    | Exp . OP_MUL Primary
    9    | Exp . OP_DIV Primary
   10    | Exp . OP_POW Primary
   11    | Exp . OP_MOD Primary
   12    | Exp . OP_FACT

    OP_SUB   shift, and go to state 40
    OP_ADD   shift, and go to state 41
    OP_DIV   shift, and go to state 42
    OP_MUL   shift, and go to state 43
    OP_MOD   shift, and go to state 44
    OP_POW   shift, and go to state 45
    OP_FACT  shift, and go to state 46

    $default  reduce using rule 2 (Start)


state 23

    5 Exp: Primary .

    $default  reduce using rule 5 (Exp)


state 24

   27 Primary: Constant .

    $default  reduce using rule 27 (Primary)


state 25

    5 Exp: . Primary
    6    | . Exp OP_ADD Primary
    7    | . Exp OP_SUB Primary
    8    | . Exp OP_MUL Primary
    9    | . Exp OP_DIV Primary
   10    | . Exp OP_POW Primary
   11    | . Exp OP_MOD Primary
   12    | . Exp OP_FACT
   13    | . M_SIN Primary
   14    | . M_COS Primary
   15    | . M_TAN Primary
   16    | . M_COTAN Primary
   17    | . M_LOG Primary
   18    | . M_LOG2 Primary
   19    | . M_LOGE Primary
   20    | . M_SQRT Primary
   21    | . M_CEIL Primary
   22    | . M_FLOOR Primary
   23    | . OP_SUB Primary
   24    | . OP_ADD Primary
   25 Primary: . VARIABLE
   26        | . VARIABLE OP_EQU Exp
   26        | VARIABLE OP_EQU . Exp
   27        | . Constant
   28        | . LPAR Exp RPAR
   29 Constant: . INT_VAL
   30         | . DBL_VAL
   31         | . CONST_PI
   32         | . CONST_E

    VARIABLE  shift, and go to state 1
    INT_VAL   shift, and go to state 2
    DBL_VAL   shift, and go to state 3
    LPAR      shift, and go to state 4
    M_SIN     shift, and go to state 7
    M_COS     shift, and go to state 8
    M_TAN     shift, and go to state 9
    M_COTAN   shift, and go to state 10
    M_LOG     shift, and go to state 11
    M_LOG2    shift, and go to state 12
    M_LOGE    shift, and go to state 13
    M_SQRT    shift, and go to state 14
    M_CEIL    shift, and go to state 15
    M_FLOOR   shift, and go to state 16
    CONST_PI  shift, and go to state 17
    CONST_E   shift, and go to state 18
    OP_SUB    shift, and go to state 19
    OP_ADD    shift, and go to state 20

    Exp       go to state 47
    Primary   go to state 23
    Constant  go to state 24


state 26

    6 Exp: Exp . OP_ADD Primary
    7    | Exp . OP_SUB Primary
    8    | Exp . OP_MUL Primary
    9    | Exp . OP_DIV Primary
   10    | Exp . OP_POW Primary
   11    | Exp . OP_MOD Primary
   12    | Exp . OP_FACT
   28 Primary: LPAR Exp . RPAR

    RPAR     shift, and go to state 48
    OP_SUB   shift, and go to state 40
    OP_ADD   shift, and go to state 41
    OP_DIV   shift, and go to state 42
    OP_MUL   shift, and go to state 43
    OP_MOD   shift, and go to state 44
    OP_POW   shift, and go to state 45
    OP_FACT  shift, and go to state 46


state 27

   13 Exp: M_SIN Primary .

    $default  reduce using rule 13 (Exp)


state 28

   14 Exp: M_COS Primary .

    $default  reduce using rule 14 (Exp)


state 29

   15 Exp: M_TAN Primary .

    $default  reduce using rule 15 (Exp)


state 30

   16 Exp: M_COTAN Primary .

    $default  reduce using rule 16 (Exp)


state 31

   17 Exp: M_LOG Primary .

    $default  reduce using rule 17 (Exp)


state 32

   18 Exp: M_LOG2 Primary .

    $default  reduce using rule 18 (Exp)


state 33

   19 Exp: M_LOGE Primary .

    $default  reduce using rule 19 (Exp)


state 34

   20 Exp: M_SQRT Primary .

    $default  reduce using rule 20 (Exp)


state 35

   21 Exp: M_CEIL Primary .

    $default  reduce using rule 21 (Exp)


state 36

   22 Exp: M_FLOOR Primary .

    $default  reduce using rule 22 (Exp)


state 37

   23 Exp: OP_SUB Primary .

    $default  reduce using rule 23 (Exp)


state 38

   24 Exp: OP_ADD Primary .

    $default  reduce using rule 24 (Exp)


state 39

    0 $accept: Start $end .

    $default  accept


state 40

    7 Exp: Exp OP_SUB . Primary
   25 Primary: . VARIABLE
   26        | . VARIABLE OP_EQU Exp
   27        | . Constant
   28        | . LPAR Exp RPAR
   29 Constant: . INT_VAL
   30         | . DBL_VAL
   31         | . CONST_PI
   32         | . CONST_E

    VARIABLE  shift, and go to state 1
    INT_VAL   shift, and go to state 2
    DBL_VAL   shift, and go to state 3
    LPAR      shift, and go to state 4
    CONST_PI  shift, and go to state 17
    CONST_E   shift, and go to state 18

    Primary   go to state 49
    Constant  go to state 24


state 41

    6 Exp: Exp OP_ADD . Primary
   25 Primary: . VARIABLE
   26        | . VARIABLE OP_EQU Exp
   27        | . Constant
   28        | . LPAR Exp RPAR
   29 Constant: . INT_VAL
   30         | . DBL_VAL
   31         | . CONST_PI
   32         | . CONST_E

    VARIABLE  shift, and go to state 1
    INT_VAL   shift, and go to state 2
    DBL_VAL   shift, and go to state 3
    LPAR      shift, and go to state 4
    CONST_PI  shift, and go to state 17
    CONST_E   shift, and go to state 18

    Primary   go to state 50
    Constant  go to state 24


state 42

    9 Exp: Exp OP_DIV . Primary
   25 Primary: . VARIABLE
   26        | . VARIABLE OP_EQU Exp
   27        | . Constant
   28        | . LPAR Exp RPAR
   29 Constant: . INT_VAL
   30         | . DBL_VAL
   31         | . CONST_PI
   32         | . CONST_E

    VARIABLE  shift, and go to state 1
    INT_VAL   shift, and go to state 2
    DBL_VAL   shift, and go to state 3
    LPAR      shift, and go to state 4
    CONST_PI  shift, and go to state 17
    CONST_E   shift, and go to state 18

    Primary   go to state 51
    Constant  go to state 24


state 43

    8 Exp: Exp OP_MUL . Primary
   25 Primary: . VARIABLE
   26        | . VARIABLE OP_EQU Exp
   27        | . Constant
   28        | . LPAR Exp RPAR
   29 Constant: . INT_VAL
   30         | . DBL_VAL
   31         | . CONST_PI
   32         | . CONST_E

    VARIABLE  shift, and go to state 1
    INT_VAL   shift, and go to state 2
    DBL_VAL   shift, and go to state 3
    LPAR      shift, and go to state 4
    CONST_PI  shift, and go to state 17
    CONST_E   shift, and go to state 18

    Primary   go to state 52
    Constant  go to state 24


state 44

   11 Exp: Exp OP_MOD . Primary
   25 Primary: . VARIABLE
   26        | . VARIABLE OP_EQU Exp
   27        | . Constant
   28        | . LPAR Exp RPAR
   29 Constant: . INT_VAL
   30         | . DBL_VAL
   31         | . CONST_PI
   32         | . CONST_E

    VARIABLE  shift, and go to state 1
    INT_VAL   shift, and go to state 2
    DBL_VAL   shift, and go to state 3
    LPAR      shift, and go to state 4
    CONST_PI  shift, and go to state 17
    CONST_E   shift, and go to state 18

    Primary   go to state 53
    Constant  go to state 24


state 45

   10 Exp: Exp OP_POW . Primary
   25 Primary: . VARIABLE
   26        | . VARIABLE OP_EQU Exp
   27        | . Constant
   28        | . LPAR Exp RPAR
   29 Constant: . INT_VAL
   30         | . DBL_VAL
   31         | . CONST_PI
   32         | . CONST_E

    VARIABLE  shift, and go to state 1
    INT_VAL   shift, and go to state 2
    DBL_VAL   shift, and go to state 3
    LPAR      shift, and go to state 4
    CONST_PI  shift, and go to state 17
    CONST_E   shift, and go to state 18

    Primary   go to state 54
    Constant  go to state 24


state 46

   12 Exp: Exp OP_FACT .

    $default  reduce using rule 12 (Exp)


state 47

    6 Exp: Exp . OP_ADD Primary
    7    | Exp . OP_SUB Primary
    8    | Exp . OP_MUL Primary
    9    | Exp . OP_DIV Primary
   10    | Exp . OP_POW Primary
   11    | Exp . OP_MOD Primary
   12    | Exp . OP_FACT
   26 Primary: VARIABLE OP_EQU Exp .  [$end, RPAR]

    OP_SUB   shift, and go to state 40
    OP_ADD   shift, and go to state 41
    OP_DIV   shift, and go to state 42
    OP_MUL   shift, and go to state 43
    OP_MOD   shift, and go to state 44
    OP_POW   shift, and go to state 45
    OP_FACT  shift, and go to state 46

    $default  reduce using rule 26 (Primary)

    Conflict between rule 26 and token OP_SUB resolved as shift (OP_EQU < OP_SUB).
    Conflict between rule 26 and token OP_ADD resolved as shift (OP_EQU < OP_ADD).
    Conflict between rule 26 and token OP_DIV resolved as shift (OP_EQU < OP_DIV).
    Conflict between rule 26 and token OP_MUL resolved as shift (OP_EQU < OP_MUL).
    Conflict between rule 26 and token OP_MOD resolved as shift (OP_EQU < OP_MOD).
    Conflict between rule 26 and token OP_POW resolved as shift (OP_EQU < OP_POW).
    Conflict between rule 26 and token OP_FACT resolved as shift (OP_EQU < OP_FACT).


state 48

   28 Primary: LPAR Exp RPAR .

    $default  reduce using rule 28 (Primary)


state 49

    7 Exp: Exp OP_SUB Primary .

    $default  reduce using rule 7 (Exp)


state 50

    6 Exp: Exp OP_ADD Primary .

    $default  reduce using rule 6 (Exp)


state 51

    9 Exp: Exp OP_DIV Primary .

    $default  reduce using rule 9 (Exp)


state 52

    8 Exp: Exp OP_MUL Primary .

    $default  reduce using rule 8 (Exp)


state 53

   11 Exp: Exp OP_MOD Primary .

    $default  reduce using rule 11 (Exp)


state 54

   10 Exp: Exp OP_POW Primary .

    $default  reduce using rule 10 (Exp)
